# teo-bullet-models

./: .gitignore  CMakeLists.txt  README.md
bullet/: TEO.urdf  joint_limits.csv
bullet/teo_description/meshes/arms/: l_elbow_link.stl  l_elbow_pitch.stl  l_hand.stl  l_humerus.stl  l_shoulder_pitch.stl  l_shoulder_roll.stl  l_shoulder_yaw.stl  l_union_elbow_wrist.stl  l_union_humerus_elbow.stl  l_wrist_pitch.stl  l_wrist_sensorFT.stl  l_wrist_yaw.stl  r_elbow_link.stl  r_elbow_pitch.stl  r_hand.stl  r_humerus.stl  r_shoulder_pitch.stl  r_shoulder_roll.stl  r_shoulder_yaw.stl  r_union_elbow_wrist.stl  r_union_humerus_elbow.stl  r_wrist_pitch.stl  r_wrist_sensorFT.stl  r_wrist_yaw.stl
bullet/teo_description/meshes/head/: head.stl  neck.stl
bullet/teo_description/meshes/legs/: l_ankle_pitch.stl  l_ankle_roll.stl  l_ankle_sensorFT.stl  l_foot.stl  l_hip_pitch.stl  l_hip_yaw.stl  l_sole.stl  l_tibia.stl  l_union_sensorFT_foot.stl  r_ankle_pitch.stl  r_ankle_roll.stl  r_ankle_sensorFT.stl  r_femur.stl  r_foot.stl  r_hip_pitch.stl  r_hip_yaw.stl  r_sole.stl  r_tibia.stl  r_union_sensorFT_foot.stl
bullet/teo_description/meshes/torso/: L-torso-shoulder.stl  R-torso-shoulder.stl  torso.stl  torso_full.stl  waist-base.stl  waist-link.stl  waist-pitch.stl  waist-yaw.stl  waist.stl
envs/: action_highs  action_limits.json  action_lows  teo.py  teoGymEnv.py  teoGymTest.py  teoGymTrain.py  teoMakeVideo.py
models/: TEO.urdf
notebooks/: bullet_test.csv  teo_stability test.ipynb
